@@ -297,6 +297,7 @@ Paul Jarc                       prj@po.cwru.edu
 Paul Lunau                      temp@lunau.me.uk
 Paul Martinolich                martinol@datasync.com
 Paul Thomas                     PTHOMAS@novell.com
+Pavel Raiskup                   praiskup@redhat.com
 Pavel Roskin                    pavel_roskin@geocities.com
 Pavel Sanda                     ps@twin.jikos.cz
 Per Bothner                     bothner@cygnus.com
